--- a/web.html
+++ b/web.html
@@ -12,7 +12,7 @@
     <div class="full-page">
         <div class="navbar">
             <div>
-                <a href='web.html'> <image src='images/logo.png' width=400px height=200px/></a>
+                <a href='web.html'> INFO-Tech</a>
             </div>
             <nav>
                 <ul id='MenuItems'>
