--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="full-page">
         <div class="navbar">
             <div>
-                <a href='web.html'> INFO-Tech</a>
+                <a href='index.html'> INFO-Tech</a>
             </div>
             <nav>
                 <ul id='MenuItems'>
