--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
             <nav>
                 <ul id='MenuItems'>
                     <li><a href='#'>Home</a></li>
+                    <li><a href='#'>Learn</a></li>
                     <li><a href='#'>About Us</a></li>
-                    <li><a href='#'>Services</a></li>
-                    <li><a href='#'>Contact</a></li>
                     <li><button class='loginbtn' onclick="document.getElementById('login-form').style.display='block'"
                             style="width:auto;">Login</button></li>
                 </ul>
