--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </div>
             <nav>
                 <ul id='MenuItems'>
-                    <li><a href='Home.html'>Home</a></li>
-                    <li><a href='#'>Learn</a></li>
+                    <li><a href='#'>Home</a></li>
+                    <li><a href='Learn.html'>Learn</a></li>
                     <li><a href='#'>About Us</a></li>
                     <li><button class='loginbtn' onclick="document.getElementById('login-form').style.display='block'"
                             style="width:auto;">Login</button></li>
