--- a/Home.html
+++ b/Home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Learn</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
