--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="full-page">
         <div class="navbar">
             <div>
-                <a href='index.html'> INFO-Tech</a>
+                <a id ="text" href='index.html'>  INFO-Tech</a>
             </div>
             <nav>
                 <ul id='MenuItems'>
-                    <li><a href='#'>Home</a></li>
+                    <li><a href='Home.html'>Home</a></li>
                     <li><a href='Learn.html'>Learn</a></li>
                    
                     <li><button class='loginbtn' onclick="document.getElementById('login-form').style.display='block'"
