--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <div>
                 <a id ="text" href='index.html'>  INFO-Tech</a>
             </div>
+            <div class="book">
+                <image src="images/home.png" width=600px height=600px />
+
+            </div>
             <nav>
                 <ul id='MenuItems'>
                     <li><a href='Home.html'>Home</a></li>
